kubernetes-networks/canary/web-svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-prod
spec:
  selector:
    app: web-prod
  type: ClusterIP
  clusterIP: None
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: web-canary
spec:
  selector:
    app: web-canary
  type: ClusterIP
  clusterIP: None
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
