kubernetes-networks/canary/canary-web-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
    - host: canary-sandbox.com
      http:
        paths:
          - path: /canary-test
            backend:
              serviceName: web-prod
              servicePort: 8000

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-canary
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "canary"
spec:
  rules:
    - host: canary-sandbox.com
      http:
        paths:
          - path: /canary-test
            backend:
              serviceName: web-canary
              servicePort: 8000
